# heidi-todoist

./: .gitignore  .pre-commit-config.yaml  README.md  function_app.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: build-deploy.yml
heidi_todoist/: blueprint.py  services.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
tests/: conftest.py  test_blueprint.py  test_init.py  test_services.py
