[project]
name = "heidi-todoist"
version = "0.1.0"
description = "Azure function to complete Todoist tasks for Heidi"
authors = [
    {name = "Tom Boone",email = "tbc@tomboone.com"}
]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "azure-functions (>=1.23.0,<2.0.0)",
    "todoist-api-python (>=3.1.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
